# chrisdata

./: .gitignore  LICENSE  README from Lim.txt  README.md  basic_json_dump.py  check_ip_addrs-1.py  check_ip_addrs-2.py  check_ip_addrs.py  check_ip_addrs.sh  convert_wikidata.py  convert_wikipedia.py  crawl_wikipedia-crawl.sh  crawl_wikipedia-crawl2.sh  crawl_wikipedia-export.sh  crawl_wikipedia-result.py  crawl_wikipedia.out  crawl_wikipedia.py  crawl_wikipedia.sh  dist.sh  es-by-kdc2.py  es7.py  es8.py  extract_wikidata.py  index_wikipedia.py  main.py  parse_wikidata.py  parse_wikidata.sh  parse_wikipedia.py  requirements.txt  run-elasticsearch.sh  run-mongod.sh  run_indexing.py  search_wikidata.py  search_wikidata2.py  setup-env.sh  setup-env2.sh  setup.cfg
.run/: chrisdata.cli (ner compare_eval).run.xml  chrisdata.cli (ner convert).run.xml  chrisdata.cli (ner convert-gner) [help].run.xml  chrisdata.cli (ner convert-gner) [test].run.xml  chrisdata.cli (ner convert-gner) [train].run.xml  chrisdata.cli (ner convert-gner).run.xml  chrisdata.cli (ner convert-passage-to-conll) [help].run.xml  chrisdata.cli (ner convert-passage-to-conll) [train].run.xml  chrisdata.cli (ner convert_conll) [train].run.xml  chrisdata.cli (ner convert_json) [train].run.xml  chrisdata.cli (ner convert_wiki) [help].run.xml  chrisdata.cli (ner convert_wiki) [test].run.xml  chrisdata.cli (ner convert_wiki) [train].run.xml  chrisdata.cli (ner crawl-entity-passage) [help].run.xml  chrisdata.cli (ner crawl-entity-passage) [test].run.xml  chrisdata.cli (ner crawl-entity-passage) [train].run.xml  chrisdata.cli (ner crawl_wiki) [help].run.xml  chrisdata.cli (ner crawl_wiki) [pile].run.xml  chrisdata.cli (ner crawl_wiki) [test].run.xml  chrisdata.cli (ner crawl_wiki) [train].run.xml  chrisdata.cli (ner crawl_wiki) [zero-train].run.xml  chrisdata.cli (ner) [help].run.xml  chrisdata.cli (net check).run.xml  chrisdata.cli (wikidata convert).run.xml  chrisdata.cli (wikipedia convert).run.xml  (+1 more)
(+283 files in other folders)
