[metadata]
name = chrisdata
version = 0.5.0
author = Jihee Ryu
author_email = chrisjihee@naver.com
url = https://github.com/chrisjihee/chrisdata
description = Data processing tools for data analysis
long_description = file: README.md
long_description_content_type = text/markdown
license =
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = True
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    chrisbase
    jsonlines
    Wikipedia-API==0.6.0
    qwikidata

[options.packages.find]
where = src

[options.package_data]
* = README.md

[options.entry_points]
console_scripts =
    chrisdata = chrisdata.cli:main
