[metadata]
name = chrisdata
version = 0.5.2
author = Jihee Ryu
author_email = chrisjihee@naver.com
url = https://github.com/chrisjihee/chrisdata
description = Data processing library
long_description = file: README.md
long_description_content_type = text/markdown
license =
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = True
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    chrisbase>=0.5.9
    datasets
    jsonlines
    elasticsearch
    beautifulsoup4
    Wikipedia-API==0.6.0
    qwikidata
    Flask

[options.packages.find]
where = src

[options.package_data]
* = README.md

[options.entry_points]
console_scripts =
    chrisdata = chrisdata.cli:main
